# AcreHiveMind

./: DOCUMENTATION.md  README.md  index.html  package-lock.json  package.json  setup_dev_env.ps1  vite.config.ts
.github/workflows/: ci.yml  release.yml
ml_workspace/: debug_sam.py
notes/: advanced_agronomy_data.md  mcp_protocol.md
public/: splash.html
src/: main.ts  map.ts  styles.css  weather.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: agronomy_math.rs  db.rs  lib.rs  main.rs  mcp_server.rs  sam.rs  satellite.rs  tiles.rs  weather.rs  weather_api.rs
src/tests/: mcp-e2e.test.ts
